# mcp-common

./: .betterleaks.toml  .gitignore  .gitleaksignore  .lycheecache  .lycheeignore  .pyscn.toml  .semgrepignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  QUICKSTART.md  QWEN.md  README.md  RULES.md  SESSION_SUMMARY_PROMPTING_ADAPTER.md  TEST_QUICK_START.md  USAGE_PROFILES_VALIDATION.md  json  pyproject.toml
.oneiric_cache/: runtime_telemetry.json  workflow_checkpoints.sqlite
.pyscn/reports/: analyze_20260704_022626.html  analyze_20260704_022851.json  analyze_20260704_033149.json  analyze_20260706_025314.json  analyze_20260706_030343.json  analyze_20260706_060550.json  analyze_20260713_051510.json  analyze_20260721_010013.json
.test_cache/snapshots/: full-server_2026-01-02T23-38-08.json  full-server_2026-01-02T23-41-14.json
docs/: ACB_FOUNDATION.md  ARCHITECTURE.md  EXCEPTION_SUPPRESSION_ACTION_PLAN.md  IMPLEMENTATION_PLAN.md  IMPORT_DETECTION_MIGRATION.md  INTEGRATION_TRACKING.md  MCP_ECOSYSTEM_CRITICAL_AUDIT.md  MCP_SERVERS_INTEGRATION_SUMMARY.md  MCP_SERVER_MIGRATION_SUMMARY.md  MIGRATION_COMPLETE_SUMMARY.md  ONEIRIC_CLI_AUDIT_RESPONSE.md  ONEIRIC_CLI_FACTORY_IMPLEMENTATION.md  ONEIRIC_CLI_FACTORY_PLAN.md  ONEIRIC_CLI_FACTORY_SPEC_REVIEW.md  PHASE1_COMPLETE_SUMMARY.md  PHASE3_3_M2_PROGRESS.md  PHASE3_3_M3_RFC.md  PHASE3_ARCHITECTURE_REVIEW.md  PHASE3_COMPLETION_SUMMARY.md  PHASE3_CONSOLIDATED_REVIEW.md  PHASE4_10_RFC.md  PLAN_STATUS.md  RATE_LIMIT_CONFIG_MIGRATION.md  RATE_LIMIT_LOAD_TESTING.md  README.md  SECURITY_IMPLEMENTATION.md  SERVER_INTEGRATION.md  iterm2-applescript-protocol.md
docs/archive/: README.md
docs/archive/analysis/: TEST_COVERAGE_EXPANSION.md
docs/archive/completion-reports/: CHECKPOINT_PROMPTING_ADAPTER_COMPLETE.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  PHASE5_SUMMARY.md  PHASE6_SUMMARY.md  SESSION_SUMMARY_PROMPTING_ADAPTER.md  TEST_COVERAGE_COMPLETION_REPORT.md  USAGE_PROFILES_IMPLEMENTATION_SUMMARY.md  test_coverage_improvement_report.md
docs/archive/docs/: COMPREHENSIVE_IMPROVEMENT_PLAN.md
docs/archive/test-artifacts/: coverage.json  coverage__20260516-230754.json  test_coverage_analysis.py
docs/guides/: server-development.md  usage-profiles.md
docs/reference/: COVERAGE_POLICY.md  service-dependencies.md
docs/schemas/: topic-vocabulary-v1.md
examples/: README.md  cli_server.py  full_server.py  minimal_server.py  prompt_demo.py  prompting_advanced.py  prompting_basics.py  prompting_file_selection.py  standard_server.py  weather_server.py
mcp/contracts/: code_graph_tools.md  code_graph_tools.yaml
mcp_common/: README.md  __init__.py  contracts.py  exceptions.py  health.py  http_health.py
mcp_common/.skylos/: cache.sqlite
mcp_common/adapters/: README.md  __init__.py
mcp_common/adapters/http/: README.md  __init__.py  client.py
mcp_common/apple_script/: __init__.py  bridge.py  exceptions.py
mcp_common/auth/: __init__.py  audit.py  config.py  core.py  decorator.py  exceptions.py  identity.py  permissions.py
mcp_common/backends/: __init__.py  pyobjc.py  toolkit.py
mcp_common/cli/: __init__.py  factory.py  health.py  security.py  settings.py
mcp_common/code_graph/: __init__.py  analyzer.py
mcp_common/config/: README.md  __init__.py  base.py  validation_mixin.py
mcp_common/fastmcp/: __init__.py
mcp_common/interfaces/: __init__.py
mcp_common/llm/: __init__.py  _security.py  config.py  exceptions.py  fallback.py  hailuo.py  provider.py  types.py
mcp_common/middleware/: README.md  __init__.py  rate_limit_config.py
mcp_common/parsing/: __init__.py
mcp_common/parsing/tree_sitter/: __init__.py  cache.py  core.py  exceptions.py  grammars.py  models.py  queries.py
mcp_common/profiles/: __init__.py  full.py  minimal.py  standard.py
mcp_common/prompting/: MIGRATION.md  README.md  __init__.py  adapter.py  base.py  exceptions.py  factory.py  models.py
mcp_common/schemas/: __init__.py
mcp_common/security/: README.md  __init__.py  api_keys.py  sanitization.py
mcp_common/server/: __init__.py  base.py  telemetry.py
mcp_common/tools/: __init__.py  descriptions.py  profiles.py
mcp_common/ui/: README.md  __init__.py  panels.py
mcp_common/validation/: __init__.py
mcp_common/websocket/: __init__.py  auth.py  client.py  client.py.backup  metrics.py  protocol.py  server.py  server.py.backup  tls.py
messaging/: types.py
scripts/: _frontmatter_apply_P7B.py
settings/: mahavishnu.yaml  repos.yaml
tests/: conftest.py  test_code_graph.py  test_code_graph_branches.py  test_concurrency.py  test_config.py  test_config_security.py  test_config_validation_mixin.py  test_contracts.py  test_coverage_easy_wins.py  test_health.py  test_health_tools.py  test_http_client.py  test_http_health.py  test_interfaces.py  test_llm.py  test_performance_optimizations.py  test_profiles.py  test_prompting_adapter.py  test_rate_limit_config.py  test_sanitization.py  test_schemas.py  test_schemas_property.py  test_security_api_keys.py  test_security_sanitization.py  test_tools_descriptions.py  test_tools_profiles.py  test_tree_sitter_exceptions.py  test_ui_panels.py  test_validation.py  test_version.py  test_websocket_server.py
tests/auth/: test_audit.py  test_config.py  test_core.py  test_decorator.py  test_exceptions.py  test_identity.py  test_permissions.py
tests/cli/: test_cli_factory.py  test_factory.py  test_settings.py
tests/integration/: __init__.py  test_examples.py  test_http_client_integration.py  test_inter_service_auth.py
tests/parsing/tree_sitter/: test_cache.py  (+6 more)
tests/performance/: test_config_benchmarks.py  test_http_pooling.py  test_rate_limits_load.py  test_sanitization_benchmarks.py  test_validation_benchmarks.py
tests/server/: test_base.py
tests/unit/: test_apple_script_bridge.py  test_exceptions.py  test_fastmcp_version.py  test_interfaces.py  test_llm_additional.py  test_pyobjc_backend.py  test_schemas.py  test_server_telemetry.py  test_ui_panels.py  test_validation.py  test_validation_mixin.py  test_websocket_auth.py  test_websocket_client.py  test_websocket_metrics.py  test_websocket_tls.py
(+8 files in other folders)
