[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-common"
version = "2.0.0"
description = "ACB-native foundation library providing battle-tested patterns for MCP (Model Context Protocol) servers, with dependency injection, structured logging, and lifecycle management"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "Les Leslie", email = "les@wedgwoodwebworks.com" },
]
keywords = [
    "mcp",
    "model-context-protocol",
    "fastmcp",
    "utilities",
    "http-client",
    "rate-limiting",
    "configuration",
    "security"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Typing :: Typed",
]

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "fastmcp>=0.2.0",
    "acb", # ACB-native: core dependency (v2.0.0)
]

[project.optional-dependencies]
# ACB integration support - moved to core dependencies for v2.0
# acb = [
#     "acb>=0.1.0",
# ]

# Redis-backed distributed rate limiting
redis = [
    "redis[hiredis]>=5.0.0",
]

# Prometheus metrics export
metrics = [
    "prometheus-client>=0.21.0",
]

# Development dependencies
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "hypothesis>=6.122.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "bandit>=1.8.0",
    "safety>=3.2.0",
    "respx>=0.21.0",  # HTTP mocking for httpx
    "crackerjack",  # MCP server framework integration
    "session-mgmt-mcp",  # Session management MCP server
]

# All optional dependencies combined
all = [
    "mcp-common[redis,metrics,dev]",  # acb is now core dependency
]

[project.urls]
Homepage = "https://github.com/lesleslie/mcp-common"
Documentation = "https://github.com/lesleslie/mcp-common#readme"
Repository = "https://github.com/lesleslie/mcp-common"
Issues = "https://github.com/lesleslie/mcp-common/issues"

[tool.hatchling.build.targets.wheel]
packages = ["mcp_common"]

# ==================== Ruff Configuration ====================
[tool.ruff]
line-length = 100
target-version = "py313"
src = ["mcp_common", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "ANN",    # flake8-annotations
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit (security)
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "EXE",    # flake8-executable
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "G",      # flake8-logging-format
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PYI",    # flake8-pyi
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PL",     # pylint
    "TRY",    # tryceratops
    "FLY",    # flynt
    "PERF",   # perflint
    "RUF",    # ruff-specific rules
]
ignore = [
    "COM812",  # Trailing comma missing (conflicts with formatter)
    "ISC001",  # Single line implicit string concatenation (conflicts with formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # Allow assert in tests
    "ANN201",  # Allow missing return type in tests
    "PLR2004", # Allow magic values in tests
]

[tool.ruff.lint.isort]
known-first-party = ["mcp_common"]

[tool.ruff.lint.pydocstyle]
convention = "google"

# ==================== MyPy Configuration ====================
[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false

# ==================== Pytest Configuration ====================
[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=mcp_common",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=90",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "performance: marks tests as performance/load tests",
]

# ==================== Coverage Configuration ====================
[tool.coverage.run]
source = ["mcp_common"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
precision = 2
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

# ==================== Bandit Configuration ====================
[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101"]  # Allow assert in test files

# ==================== Hatch Environments ====================
[tool.hatch.envs.default]
dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "hypothesis>=6.122.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "respx>=0.21.0",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args}"
test-cov = "pytest --cov {args}"
lint = "ruff check {args:mcp_common tests}"
format = "ruff format {args:mcp_common tests}"
format-check = "ruff format --check {args:mcp_common tests}"
type-check = "mypy {args:mcp_common tests}"
security = "bandit -r mcp_common"
all = [
    "format",
    "lint",
    "type-check",
    "test-cov",
    "security",
]

[tool.uv.sources]
acb = { path = "../acb", editable = true }

# ==================== Dependency Groups ====================
# Modern UV dependency groups (replaces deprecated tool.uv.dev-dependencies)
[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "hypothesis>=6.122.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "bandit>=1.8.0",
    "safety>=3.2.0",
    "respx>=0.21.0",
    "crackerjack",
    "session-mgmt-mcp",
]
